5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1880_2219.log
== TEST (2019-07-03 14:36:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(a):
	if(a[i]>a[j]):
		c=mean(a[i][j])
	b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:37:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	if(a[i]>a[j]):
		c=mean(a[i][j])
	b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:37:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
j=0
for i in range(size(a)):
	if(a[i]>a[j]):
		c=mean(a[i][j])
	b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:05:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	if(a[i]>a[j]):
		c=sum(a[i,j])
	b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:06:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
j=0
for i in range(size(a)):
	if(a[i]>a[j]):
		c=sum(a[i,j])
	b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:06:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(a[i]>a[j]):
			c=sum(a[i,j])
		b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:07:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(b<size(a)):
			c=sum(a[i,j])
		b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:08:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(b<size(a)):
			c=sum(a[i:j])
		b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:08:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(b<size(a)):
			c=sum(a[i:j])
		b+=1
print(c)
-- EXECUTION TIME:
1.18207
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
140
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
4.680000000000001
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
1279.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:08:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(b<size(a)):
			c=sum(a[i:j])
		b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:08:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(b<size(a)):
			c=sum(a[i:j])
		b+=1
print(c)
-- EXECUTION TIME:
1.02786
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
140
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
4.680000000000001
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
1279.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:08:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(b<size(a)):
			c=sum(a[i:j])
		b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:09:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(b<size(a)) and (a[i]>a[j]:
			c=sum(a[i:j])
		b+=1
print(c)
-- ERROR:
File "XXXX", line 8
    if(b<size(a)) and (a[i]>a[j]:
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:09:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(b<size(a)) and (a[i]>a[j]):
			c=sum(a[i:j])
		b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:10:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(a[i]>a[j]):
			c=sum(a[i:j])
		b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:10:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(b<size(a)):
			c=sum(a[i:j])
		b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:12:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(b<size(a)):
			c=sum(a[i:j])
		b+=1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:12:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input()))
b=0
for i in range(size(a)):
	for j in range(size(a)):
		if(b<size(a)):
			c=sum(a[i:j])
		b+=1
print(c)
-- EXECUTION TIME:
1.06672
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
140
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
4.680000000000001
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
1279.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
